--- a/content/posts/2026-01-03-blot.md
+++ b/content/posts/2026-01-03-blot.md
@@ -6,7 +6,7 @@ tags: ["Code", "Open Source", "Software"]
 
 ![Blot running on macOS](/images/blotlaptop.png)
 
-# Building Blot: A Native Bitmap Editor for macOS
+[GitHub Link for Blot](https://github.com/suobset/blot)
 
 I built a paint program. In 2026. On purpose.
 
