--- a/content/posts/2026-01-03-blot.md
+++ b/content/posts/2026-01-03-blot.md
@@ -16,7 +16,7 @@ Not because the world desperately needed another image editor, but because I wan
 
 Here's the thing: macOS doesn't ship with a basic paint program (well, it used to until OS X came around...RIP [MacPaint](https://en.wikipedia.org/wiki/MacPaint)). Preview can annotate. Photos can adjust. But if you want to just *draw something* to mess around with- some pixels on a canvas—your options are surprisingly grim.
 
-You can use an Electron app that bundles an entire Chromium instance to push pixels around. You can pay Adobe $20/month for the privilege of launching Photoshop for 45 seconds of work (I hope not). You can use a web app and pray your browser doesn't eat your work when you accidentally hit the back button (no hate to JSPaint, though....I love that).
+You can use an Electron app that bundles an entire Chromium instance to push pixels around. You can pay Adobe $20/month for the privilege of launching Photoshop for just messing around (I hope not). You can use a web app and pray your browser doesn't eat your work when you accidentally hit the back button (no hate to JSPaint, though....I love that).
 
 Or you can just... not have a simple paint program, I guess.
 
