Add Website for Blot

--- a/content/posts/2026-01-03-blot.md
+++ b/content/posts/2026-01-03-blot.md
@@ -6,6 +6,10 @@ tags: ["Code", "Open Source", "Software"]
 
 ![Blot running on macOS](/images/blotlaptop.png)
 
+*Update: Blot has a Website!!*
+
+[blot.skushagra.com](https://blot.skushagra.com/)
+
 [GitHub Link for Blot](https://github.com/suobset/blot)
 
 I built a paint program. In 2026. On purpose.
