Rename Blot -> Splatr

--- a/content/posts/2026-01-03-splatr.md
+++ b/content/posts/2026-01-03-splatr.md
@@ -1,16 +1,16 @@
 ---
-title: "Blot: A Native Bitmap Editor for macOS"
+title: "splatr: A Native Bitmap Editor for macOS"
 date: 2026-01-03
 tags: ["Code", "Open Source", "Software"]
 ---
 
-![Blot running on macOS](/images/blotlaptop.png)
+![splatr running on macOS](/images/splatrlaptop.png)
 
-*Update: Blot has a Website!!*
+*Update: splatr has a Website!!*
 
-[blot.skushagra.com](https://blot.skushagra.com/)
+[splatr.skushagra.com](https://splatr.skushagra.com/)
 
-[GitHub Link for Blot](https://github.com/suobset/blot)
+[GitHub Link for splatr](https://github.com/suobset/splatr)
 
 I built a paint program. In 2026. On purpose.
 
@@ -32,7 +32,7 @@ I found this unacceptable. So I decided to build the tool I wanted. A bitmap edi
 - Doesn't require an internet connection, account, or subscription
 - Uses less RAM than a single Chrome tab
 
-I called it Blot.
+I called it splatr.
 
 ## Design Philosophy
 
@@ -40,7 +40,7 @@ I called it Blot.
 
 I have a particular allergy to non-native software. Not because I'm some kind of purist—okay, maybe a little—but because I've experienced what software *can* feel like when it's built for the platform it runs on. I know what native Mac software feels like, and I refuse to accept less.
 
-Blot is built with Swift, SwiftUI, and AppKit. Zero dependencies. No CocoaPods, no SPM packages, no node_modules folder lurking in the shadows. Just Apple frameworks, talking directly to Apple hardware.
+splatr is built with Swift, SwiftUI, and AppKit. Zero dependencies. No CocoaPods, no SPM packages, no node_modules folder lurking in the shadows. Just Apple frameworks, talking directly to Apple hardware.
 
 This matters. When you drag the brush across the canvas, you're not waiting for a JavaScript event loop to notice. When you flood-fill an area, you're not marshaling data across a web bridge. The code that handles your input is the code that draws your pixels. No translation layer. No abstraction tax.
 
@@ -54,7 +54,7 @@ The floating palette paradigm exists for a reason: it lets you maximize canvas s
 
 ![BBEdit Editing this website's CSS](/images/bbedit-skushagra.png)
 
-So Blot uses `NSPanel` with the `.utilityWindow` style mask. These panels:
+So splatr uses `NSPanel` with the `.utilityWindow` style mask. These panels:
 
 - Float above the main window
 - Hide when you switch to another app
@@ -167,17 +167,17 @@ I considered overriding `isFlipped` on the canvas view but decided against it—
 
 ### The Document Model
 
-Blot uses SwiftUI's `DocumentGroup` scene with a custom `FileDocument` type. This gives you a lot for free:
+splatr uses SwiftUI's `DocumentGroup` scene with a custom `FileDocument` type. This gives you a lot for free:
 
 - Open/Save/Save As dialogs
 - Recent documents
 - Dirty document tracking (the dot in the close button)
 - Window restoration
 
-The native format (`.blot`) is dead simple: 16 bytes of header (width and height as Float64), followed by PNG data. This preserves canvas dimensions exactly while keeping the actual image data in a standard format.
+The native format (`.splatr`) is dead simple: 16 bytes of header (width and height as Float64), followed by PNG data. This preserves canvas dimensions exactly while keeping the actual image data in a standard format.
 
 ```swift
-if contentType == .blot {
+if contentType == .splatr {
     let width = data.withUnsafeBytes { $0.load(fromByteOffset: 0, as: Float64.self) }
     let height = data.withUnsafeBytes { $0.load(fromByteOffset: 8, as: Float64.self) }
     let imageData = data.dropFirst(16)
@@ -197,9 +197,9 @@ But—and this is important—you still need AppKit for anything that involves s
 
 ### Simple Software Is Hard
 
-Making something simple is harder than making something complex. Every feature you add is a feature you have to maintain, document, and potentially break. Blot has exactly 16 tools because that's how many a paint program needs. Not 15, not 17. Sixteen.
+Making something simple is harder than making something complex. Every feature you add is a feature you have to maintain, document, and potentially break. splatr has exactly 16 tools because that's how many a paint program needs. Not 15, not 17. Sixteen.
 
-The temptation to add "just one more thing" is constant. Layer support? Selection transformations? Filters? All technically possible. All explicitly out of scope. Blot is a bitmap editor. It edits bitmaps. Scope discipline is a feature.
+The temptation to add "just one more thing" is constant. Layer support? Selection transformations? Filters? All technically possible. All explicitly out of scope. splatr is a bitmap editor. It edits bitmaps. Scope discipline is a feature.
 
 ### Native Software Is a Superpower
 
@@ -209,7 +209,7 @@ This is the tax you pay for Electron: you get cross-platform deployment, but you
 
 ## What's Next
 
-Blot is open source, MIT licensed, and available on [GitHub](https://github.com/suobset/blot). I'm calling it 1.0 because it does what I built it to do: edit bitmaps, simply and natively.
+splatr is open source, MIT licensed, and available on [GitHub](https://github.com/suobset/splatr). I'm calling it 1.0 because it does what I built it to do: edit bitmaps, simply and natively.
 
 Future work might include:
 
@@ -225,4 +225,4 @@ But honestly? It might stay exactly as it is. Software doesn't have to grow fore
 
 ---
 
-*Blot is available now at [github.com/suobset/blot](https://github.com/suobset/blot). It's free, it's open source, and it's about 2MB.*
+*splatr is available now at [github.com/suobset/splatr](https://github.com/suobset/splatr). It's free, it's open source, and it's about 2MB.*
