Fix Splatr Hero Image

--- a/content/posts/2026-01-03-splatr.md
+++ b/content/posts/2026-01-03-splatr.md
@@ -4,7 +4,7 @@ date: 2026-01-03
 tags: ["Code", "Open Source", "Software"]
 ---
 
-![splatr running on macOS](/images/splatrlaptop.png)
+![splatr running on macOS](https://splatr.skushagra.com/blotlaptop.png)
 
 *Update: splatr has a Website!!*
 
